<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/website_edit_text"
           android:text="@string/edit_website">
       </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_website_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_website"
            android:onClick="openWebsite">
        </Button>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_edit_text"
            android:text="@string/edit_location">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_location"
            android:onClick="openLocation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/share_edit_text"
            android:text="@string/edit_share">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_edit_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_share"
            android:onClick="shareText">
        </Button>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/implicit_edit_text">
        </EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/implicit_button"
            android:layout_marginBottom="24dp"
            android:text="@string/app_name"
            android:onClick="sendData">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 